--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
       .ads{
-        width: 400px;
+        width: 100%;
         padding: 200px 0;
         vertical-align: middle;
         background-color: #F4FFFD;
